# SPIRV-VM

./: .gitignore  CMakeLists.txt  CMakeSettings.json
inc/spvm/ext/: GLSL450.h
simulator/: simulator.cpp  window.cpp  window.h
src/: opcode_execute.c
src/ext/: GLSL450.c  OpenCL.std.h
